--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="profile">
             <img class="profile-img" src="imgs/shubham.png" alt="Profile Picture">
             <h2>Hello.</h2>
-            <p class="intro">I am Shubham Ramashankar Kanaujiya, I am starting a career in Website Designing and web Development.
+            <p class="intro">Hello, my name is Shubham. I am currently a 2nd year B.Tech student pursuing Metallurgy and Materials Engineering. I have recenlty started my career in web development.
             </p>
         </div>
         <hr>
@@ -41,7 +41,7 @@
             <div class="skill-row">
                 <img class="html-img" src="imgs/html.png" alt="html-logo">
                 <h3>HTML</h3>
-                <p> HTML is the standard markup language for creating Web pages. he purpose of a web browser (Chrome, Edge, Firefox, Safari) is to read HTML documents and display them correctly. A browser does not display the HTML tags, but uses them to determine how to display the document</p>
+                <p> HTML is the standard markup language for creating Web pages. he purpose of a web browser (Chrome, Edge, Firefox, Safari) is to read HTML documents and display them correctly.</p>
             </div>
             <div class="skill-row">
                 <img class="css-img" src="imgs/css.png" alt="css-logo">
@@ -57,7 +57,7 @@
              <div class="skill-row">
                 <img class="c-img" src="imgs/letter-c.png" alt="c-logo">
                 <h3>C</h3>
-                <p>C is a general-purpose programming language that is extremely popular, simple, and flexible to use. It is a structured programming language that is machine-independent and extensively used to write various applications, Operating Systems like Windows, and many other complex programs like Oracle database, Git, Python interpreter, and more.</p>
+                <p>C is a general-purpose programming language that is extremely popular, simple, and flexible to use.</p>
             </div>
         </div>
         <hr>
