--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="profile">
             <img class="profile-img" src="imgs/shubham.png" alt="Profile Picture">
             <h2>Hello.</h2>
-            <p class="intro">Hello, my name is Shubham. I am currently a 2nd year B.Tech student pursuing Metallurgy and Materials Engineering. I have recenlty started my career in web development.
+            <p class="intro">Hello, my name is Shubham Ramashankar Kanaujiya. I am currently a 2nd year B.Tech student pursuing Metallurgy and Materials Engineering. I have recenlty started my career in web development.
             </p>
         </div>
         <hr>
