--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.facebook.com/">Facebook</a>
         <a class="footer-link" href="https://www.instagram.com/">Instagram</a>
-        <p>©Copyright.2023.@shubhamkanaujiya</p>
+        <p>&copy;Copyright.2023.@shubhamkanaujiya</p>
     </div>
 
 </body>
