--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
              <div class="skill-row">
                 <img class="c-img" src="imgs/letter-c.png" alt="c-logo">
                 <h3>C</h3>
-                <p>C is a general-purpose programming language that is extremely popular, simple, and flexible to use.</p>
+                <p>C is a general-purpose programming language that is extremely popular, simple, and flexible to use. It is a structured programming language that is machine-independent and extensively used to write various applications, Operating Systems like Windows, and many other complex programs like Oracle database, Git, Python interpreter,etc.</p>
             </div>
         </div>    
         
